k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: thrive-app
  labels:
    name: thrive-app
    app.kubernetes.io/name: thrive-hello-world
    app.kubernetes.io/part-of: thrive-takehome
